--- a/index.css
+++ b/index.css
@@ -1,12 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Open+Sans&family=Petit+Formal+Script&family=Roboto:wght@300;400&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+}
+html{
+    scroll-behavior: smooth;
+}
+header{
+    background-color: #0a0a0a;
+}
+nav{
+    padding: 15px 100px;
 }
 header nav ul{
     display: flex;
-    gap: 20px;
+    gap: 10px;
     justify-content: space-evenly;
+}
+nav ul li a{
+    color:  #f5f5f7;
+    font-size: 12px;
+}
+/* !main */
+.nav{
+    background-color: #1d1d1f;
+    text-align: center;
+    color: #fff;
+    padding: 15px;
+}
+.nav p{
+    font-size: 14px;
+}
+.nav p a{
+    color: rgb(41, 151, 255);
+}
+.main{
+    padding: 50px;
+    text-align: center;
+    height: 100vh;
+    background-image: url(apple1.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-bottom: 15px solid #fff;
+}
+.main h1 a{
+    color: #fff;
+    font-size: 3.5rem;
+}
+.main p{
+    color: #fff;
+    font-size: 2rem;
+    margin: 5px;
+}
+.links{
+    margin: 15px;
+}
+.links a{
+    font-size: 1.5rem;
+    color:  rgb(41, 151, 255);
+    padding: 0 20px;
+}
+.macmini{
+    background-image: url(macmini.jpg);
+}
+.Homepod{
+    background-image: url(pod.jpg);
 }
