--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ nav ul li a{
     background-color: #1d1d1f;
     text-align: center;
     color: #fff;
-    padding: 15px;
+    padding: 15px 30px;
 }
 .nav p{
     font-size: 14px;
@@ -194,5 +194,25 @@ nav ul li a{
     }
     header nav ul{
         justify-content: space-between;
+    }
+    .main{
+        height: 60vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .main h1 a {
+    font-size: 2rem;
+    }
+    .main p {
+        font-size: 1.3rem;
+        padding: 0 15px;
+    }
+    .links{
+        width: 100%;
+    }
+    .links a{
+        padding: 8px;
+        font-size: 1.1rem;
     }
   }
