--- a/index.css
+++ b/index.css
@@ -195,6 +195,9 @@ nav ul li a{
     header nav ul{
         justify-content: space-between;
     }
+    header nav ul li a{
+        font-size: 20px;
+    }
     .main{
         height: 60vh;
         display: flex;
@@ -214,5 +217,15 @@ nav ul li a{
     .links a{
         padding: 8px;
         font-size: 1.1rem;
+    }
+    .grid{
+        padding: 0;
+    }
+    .grid_1{
+        margin: 10px 0;
+        display: flex;
+        flex-direction: column;
+    }
+    .iphone_14_pro, .iphone_14{
     }
   }
