--- a/index.css
+++ b/index.css
@@ -4,9 +4,9 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    text-decoration: none;
     font-family: 'Roboto', sans-serif;
 }
+
 html{
     scroll-behavior: smooth;
 }
@@ -27,6 +27,7 @@ header nav ul{
 nav ul li a{
     color:  #f5f5f7;
     font-size: 13px;
+    text-decoration: none;
 }
 /* !main */
 .nav{
@@ -40,6 +41,7 @@ nav ul li a{
 }
 .nav p a{
     color: rgb(41, 151, 255);
+    text-decoration: none;
 }
 .main{
     padding: 50px;
@@ -54,6 +56,7 @@ nav ul li a{
 .main h1 a{
     color: #fff;
     font-size: 3.5rem;
+    text-decoration: none;
 }
 .main p{
     color: #fff;
@@ -67,6 +70,7 @@ nav ul li a{
     font-size: 1.5rem;
     color:  rgb(41, 151, 255);
     padding: 0 20px;
+    text-decoration: none;
 }
 .macmini{
     background-image: url(macmini.jpg);
@@ -117,6 +121,7 @@ nav ul li a{
     padding: 0 10px;
     font-size: 1.1rem;
     color:  rgb(41, 151, 255);
+    text-decoration: none;
 }
 .iphone_14{
     background-image: url(14.jpg);
@@ -180,7 +185,21 @@ nav ul li a{
     font-size: 1.2rem;
     margin: 10px;
 }
-
+/* !footer */
+footer{
+    padding: 20px 100px;
+    background-color: #f5f5f7;
+    margin: 20px 0;
+}
+footer p{
+    font-size: 12px;
+    color:  #6c6c6e;
+}
+.footer_list{
+}
+.footer_list a{
+    text-decoration: none;
+}
 /* !media */
 @media only screen and (max-width: 800px) {
     .none{
@@ -231,5 +250,8 @@ nav ul li a{
     }
     .series8{
         padding: 50px
+    }
+    footer{
+        padding: 15px;
     }
   }
